--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
             <h1>Моё портфолио</h1>
         </header>
         <nav>
-            <a href=".q">Обо мне</a>
-            <a href=".aaaaa">ААААА</a>
-            <a href=".s">Смешарики</a>
-            <a href=".g">Геометрия</a>
+            <a href="#q">Обо мне</a>
+            <a href="#aaaaa">ААААА</a>
+            <a href="#s">Смешарики</a>
+            <a href="#g">Геометрия</a>
         </nav>
         <main>
             <h1></h1>
