--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main>
             <h1></h1>
             <section class="a">
-                <div class="q">
+                <div class="q" id="q">
                     <div class="oooo">
                     <h2 class="">Обо мне</h2>
                     </div>
@@ -29,7 +29,7 @@
                     </div>
                     </div>
                 </div>
-                <div class="aaaaa">
+                <div class="aaaaa" id="aaaaa">
                     <div class="aimg">
                     <img class="img" src="https://sokroma.ru/upload/resize_cache/webp/iblock/259/9exs0p3bp0xds7501ypk9t2ff9ya341y.webp"/>
                     <a class="" href="https://margarita0325.github.io/AAAA/">Ссылка</a>
@@ -41,7 +41,7 @@
                     </div>
                     </div>
                 </div>
-                <div class="s">
+                <div class="s" id="s">
                     <div class="h2p">
                     <h2>Новый год со смешариками</h2>
                     <div class="text">
@@ -53,7 +53,7 @@
                     <a class="" href="https://margarita0325.github.io/new/">Ссылка</a>
                     </div>
                 </div>
-                <div class="g">
+                <div class="g" id="g">
                     <div class="h2p">
                     <h2>Геометрия с головы до ног</h2>
                     <div class="text">
